--- a/cafhomepage.html
+++ b/cafhomepage.html
@@ -16,7 +16,7 @@
         <ul>
           <li class="menuitem"><a href="cafhomepage.html">Home</a></li>
           <li class="menuitem"><a href="#">About Us</a></li>
-          <li class="menuitem"><a href="#">Order Food</a></li>
+          <li class="menuitem"><a href="orderform.html">Order Food</a></li>
           <li class="menuitem"><a href="menu.html">Current Menu</a></li>
           <li class="menuitem"><a href="ownersbiography.html">Owner's Biography</a></li>
           <li class="menuitem"><a href="#">Contact</a></li>
