--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
         <ul>
           <li class="menuitem"><a href="cafhomepage.html">Home</a></li>
           <li class="menuitem"><a href="#">About Us</a></li>
-          <li class="menuitem"><a href="#">Order Food</a></li>
+          <li class="menuitem"><a href="orderform.html">Order Food</a></li>
           <li class="menuitem"><a href="menu.html">Current Menu</a></li>
           <li class="menuitem"><a href="ownersbiography.html">Owner's Biography</a></li>
           <li class="menuitem"><a href="#">Contact</a></li>
@@ -25,30 +25,30 @@
                 <button class="collapsible"> Breakfast <img src="images/weather-sunrise.gif" width="120px"></button>
                 <div class="menucontent">
                   <p><h3>Crepes <i>$5.50</i></h3>
-                   <br> Choice of 3 complimentary toppings ($.50 each for additional toppings)<br>
+                   <br> Choice of complimentary toppings <br>
                     <img src="images/crepes.jpg" width="200px"></p>
                   <br>
                   <p><h3>Waffle <i>$5.50</i></h3>
-                    <br>Choice of 3 complimentary toppings ($.50 each for additional toppings)<br>
+                    <br>Choice of complimentary toppings <br>
                     <img src="images/waffle.jpg" width="200pix"></p>
                   <br>
                   <p><h3>Mini Pancakes (7ct) <i>$5.50</i></h3>
-                    <br>Choice of 3 complimentary toppings ($.50 each for additional toppings)<br>
+                    <br>Choice of complimentary toppings <br>
                     <img src="images/pancakes.jpg" width="200pix"></p>
                   <br>
-                  <p><h3> Croissant <i>$2.50</i></h3>
+                  <p><h3> Croissant <i>$5.50</i></h3>
                     <br>Choice of plain, almond, and chocolate<br>
                     <img src="images/croissant.jpg" width="200pix"></p>
                   <br>
-                  <p><h3> Bagel with Cream Cheese <i>$3.50</i></h3>
-                    <br>Choice of 3 complimentary toppings ($.50 each for additional toppings)<br>
+                  <p><h3> Bagel with Cream Cheese <i>$5.50</i></h3>
+                    <br>Choice of complimentary toppings <br>
                     <img src="images/bagel.jpg" width="200pix"></p>
                   <br>
-                  <p><h3>Breakfast Burrito <i>$7.50</i></h3>
-                    <br>Choice of 4 complimentary fillings ($.50 each for additional toppings)<br>
+                  <p><h3>Breakfast Burrito <i>$5.50</i></h3>
+                    <br>Choice of complimentary fillings <br>
                     <img src="images/BreakfastBurritos.jpg" width="200pix"></p>
                   <br>
-                  <p><h3>Chicken Biscuit (2ct) <i>$7.50</i></h3>
+                  <p><h3>Chicken Biscuit (2ct) <i>$5.50</i></h3>
                     <br>Comes with sauce and slaw and your choice of spice level<br>
                     <img src="images/chickenbiscuit.jpg" width="200pix"></p>
                 </div>
@@ -58,37 +58,37 @@
                     <br> Choice of Beef, Chicken, or Falafel <br>
                      <img src="images/shawarma.jpg" width="200px" height="150px"></p>
                    <br>
-                   <p><h3> Pasta Bowl <i>$6.50</i></h3>
-                     <br>Choice of 5 complimentary toppings ($.50 each for additional toppings)<br>
+                   <p><h3> Pasta Bowl <i>$7.50</i></h3>
+                     <br>Choice of complimentary toppings <br>
                      <img src="images/pasta.jpg" width="200pix" height="200px"></p>
                    <br>
-                   <p><h3>Deli Style Sandwiches <i>5.50</i></h3>
-                     <br>Choice of 3 complimentary toppings ($.50 each for additional toppings)<br>
+                   <p><h3>Deli Style Sandwiches <i>7.50</i></h3>
+                     <br>Choice of complimentary toppings<br>
                      <img src="images/deli.jpg" width="200pix"></p>
                    <br>
-                   <p><h3> Build your own Salad or Rice Bowl <i> 5.50</i></h3>
-                     <br>Choice of base and 5 complimentary toppingd ($.50 each for additional toppings)<br>
+                   <p><h3> Build your own Salad or Rice Bowl <i> 7.50</i></h3>
+                     <br>Choice of complimentary toppings<br>
                      <img src= "images/salad.jpg" width="200pix"></p>
                    <br>
-                   <p><h3>Soup of the day<i> 3.50</i></h3>
-                     <br> Additional $3+ for half sandswich/salad<br>
+                   <p><h3>Soup of the day<i> 7.50</i></h3>
+                     <br> Includes half sandswich/salad<br>
                      <img src="images/soup.jpg" width="200pix"></p>
                    <br>
                    <p><h3> Burrito or Burrito Bowl <i>$7.50</i></h3>
-                     <br>Choice of 4 complimentary fillings ($.50 each for additional toppings)<br>
+                     <br>Choice of complimentary fillings <br>
                      <img src="images/burrito bowl.jpg" width="200pix"></p>
                    <br>
-                   <p><h3> Pizza Slice <i>$2</i></h3>
-                     <br>Slice of our classic pizzas (Cheese, Beef Pepperoni, Veggie, White)<br>
+                   <p><h3> Personal Pizza <i>$2</i></h3>
+                     <br>Choice of our classic pizzas (Cheese, Beef Pepperoni, Veggie, White)<br>
                      <img src="images/pizzaslice.jpg" width="200pix" height="150px"></p>
                 </div>
                 <button class="collapsible">Dinner <img src="images/giphy.gif" width="150px"></button>
                 <div class="menucontent">
-                  <p><h3>Banh Mi <i>$8.50</i></h3>
+                  <p><h3>Banh Mi <i>$10.50</i></h3>
                     <br> Choice of Chicken or Beef<br>
                      <img src="images/banhmi.jpg" width="200px" ></p>
                    <br>
-                   <p><h3> Lasagna Slice <i>$9.50</i></h3>
+                   <p><h3> Lasagna Slice <i>$10.50</i></h3>
                      <br>Choice of veggie or meat <br>
                      <img src="images/Lasagna.jpg" width="200pix"></p>
                    <br>
@@ -96,44 +96,44 @@
                      <br> Comes with naan or rice <br>
                      <img src="images/butterchicken.jpg" width="200pix"></p>
                    <br>
-                   <p><h3> Mongolian Beef <i>$12.50</i></h3>
+                   <p><h3> Mongolian Beef <i>$10.50</i></h3>
                      <br>Choice of steamed or fried rice <br>
                      <img src="images/mongolianbeef.jpg" width="200pix"></p>
                    <br>
-                   <p><h3> Hot Chicken Sandwich  <i>$9.50</i></h3>
+                   <p><h3> Hot Chicken Sandwich  <i>$10.50</i></h3>
                      <br>Choice of spice level. Comes with slaw, sauce, and waffle fries 
                      <br>(can be turned into Hot Chicken Mac for additional $3)<br>
                      <img src="images/hotchicken.jpg" width="200pix"></p>
                    <br>
-                   <p><h3>Chopped Cheese<i>$7.50</i></h3>
+                   <p><h3>Chopped Cheese<i>$10.50</i></h3>
                      <br>No substitutions<br>
                      <img src="images/chopcheese.jpg" width="200pix"></p>
                    <br>
-                   <p><h3>Wings (10ct) <i>$11.50</i></h3>
+                   <p><h3>Wings (10ct) <i>$10.50</i></h3>
                      <br>Chicken wings or Cauliflower wings (Choice of sauce)
                     <br>Comes with house ranch <br>
                      <img src="images/wings.jpg" width="200px"></p>
                 </div>
                 <button class="collapsible">Drinks and Dessert <img src="images/dessert.webp" width="125"></button>
                 <div class="menucontent">
-                  <p><h3>Soda Can <i>$1.50</i></h3>
+                  <p><h3>Soda Can <i>$3.50</i></h3>
                     <br> We proudle serve HEB brand sodas<br>
                      <img src="images/soda.jpg" width="200px"></p>
                    <br>
-                   <p><h3>Latte, Cappucino,<i>$4.50</i></h3>
-                     <br>Choice of milk ($.50 for flavor shots) <br>
+                   <p><h3>Latte, Cappucino,<i>$3.50</i></h3>
+                     <br>Choice of milk and flavor shots <br>
                      <img src="images/latte.jpg" width="200pix"></p>
                    <br>
-                   <p><h3>Espresso Shot (7ct) <i>$1.50</i></h3>
+                   <p><h3>Espresso Shot (7ct) <i>$3.50</i></h3>
                      <br>Choice of roast <br>
                      <br>Caf or Decaf<br>
                      <img src="images/espresso.jpg" width="200pix"></p>
                    <br>
-                   <p><h3> Doodh Patthi Chai <i>$2.50</i></h3>
+                   <p><h3> Doodh Patthi Chai <i>$3.50</i></h3>
                      <br>Regular or Cardamom infused<br>
                      <img src="images/chai.jpg" width="200pix"></p>
                    <br>
-                   <p><h3> Cake Slice <i>$5.50</i></h3>
+                   <p><h3> Cake Slice <i>$3.50</i></h3>
                      <br>Choice of rotational flavors <br>
                      <img src="images/cake.jpg" width="200pix"></p>
                    <br>
@@ -150,7 +150,11 @@
                 
                 <script>
     alert ("Welcome to the April Menu!");
-    var coll = document.getElementsByClassName("collapsible");
+
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+var coll = document.getElementsByClassName("collapsible");
     var i;
     
     for (i = 0; i < coll.length; i++) {
