--- a/orderform.html
+++ b/orderform.html
@@ -433,7 +433,7 @@
 <form id="myForm">
 
       <h2>Contact Information</h2>
-      <label for="name">Name:</label>
+      <label for="name">Name listed on card:</label>
       <input type="text" id="name" name="name" required>
 
       <label for="email">Email:</label>
@@ -445,13 +445,13 @@
 
       <h2>Payment Information</h2>
       <label for="cardNumber">Card Number:</label>
-      <input type="text" id="cardNumber" name="cardNumber" required>
+      <input type="number" id="cardNumber" name="cardNumber" required>
 
       <label for="expiry">Expiration Date:</label>
-      <input type="text" id="expiry" name="expiry" placeholder="MM/YY" required>
+      <input type="month" id="expiry" name="expiry" placeholder="MM/YY" required>
 
       <label for="cvv">CVV:</label>
-      <input type="text" id="cvv" name="cvv" required>
+      <input type="number" id="cvv" name="cvv" required>
 
 
       
